# softneck

./: CMakeLists.txt  README.md
codigo/: position.cpp  start.cpp
main/: main.cpp  start.cpp  stop.cpp
